updates cmake to build examples?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ if (NOT BUILD_SHARED_LIBS)
   set (PC_MORE_CFLAGS "-DLIBUSBP_STATIC")
 endif ()
 
-set(ENABLE_EXAMPLES FALSE CACHE BOOL
+set(ENABLE_EXAMPLES TRUE CACHE BOOL
   "True if you want to build the examples.")
 
 set(ENABLE_TESTS FALSE CACHE BOOL
